--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@ body {
 button {
   cursor: pointer;
   font: inherit;
-  background-color: #7a0144;
-  border: 1px solid #7a0144;
+  background-color: #3AAED8;
+  border: 1px solid #3AAED8;
   border-radius: 20px;
   padding: 0.5rem 2rem;
   color: white;
@@ -25,6 +25,6 @@ button {
 
 button:hover,
 button:active {
-  background-color: #9c095a;
-  border-color: #9c095a;
+  background-color: #48A2C3;
+  border-color: #48A2C3;
 }
